--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dj-database-url = "^2.1.0"
 psycopg2-binary = "^2.9.9"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
+virtualenv = "^20.25.0"
+django-environ = "^0.11.2"
 
 
 [build-system]
