'allowed hosts mod'

--- a/mysite/.env
+++ b/mysite/.env
@@ -1,4 +1,3 @@
 SECRET_KEY=django-insecure-=utw^bjcxcvs@0n8qhipz*h2^q&dgk*c4=2v_-l=a+y@e^gv9c
 DEBUG=False
-
-
+RENDER_EXTERNAL_HOSTNAME=https://mysite-ex.onrender.com
